--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="template-header">
         <div class="logo">
-          <img src="https://www.fredericks.com/cdn/shop/files/FOH_MainLogo_GoldFoil_Brightened.png?v=1695761776&width=120">
+          <img src="https://www.buff.com/static/version1724222733344/frontend/scandipwa/pwa/en_US/Magento_Theme/static/media/buff-logo.png">
         </div>
       </div>
     </header>
@@ -31,7 +31,7 @@
 
     <!-- scripts -->
     
-    <script src="https://cdn-widgetsrepository.yotpo.com/v1/loader/F23aw2idZ4LVoqWWsqjfvMHi95QJMeOvwV3RLsLX?languageCode=en" async></script>    
+    <script src="https://cdn-widgetsrepository.yotpo.com/v1/loader/1VNYeyhMoWdA1hTQiHNriw0wwlU9IfILuyMxAX5J?languageCode={{ localization.language.iso_code | escape }}" async></script>    
     <!-- end of scripts -->
   </body>
 </html>
